# tempcast

./: .gitignore  README.md  pyproject.toml  ruff.toml
conf/: config.yaml
conf/hydra/: settings.yaml
conf/hydra/callbacks/: plot.yaml  wandb.yaml
conf/hydra/job_logging/: custom.yaml
conf/model/: conv_lstm.yaml  gru.yaml  simple_rnn.yaml  stacked_lstm.yaml
conf/series/: mulvar.yaml  univar.yaml
conf/wandb/: default.yaml
railcast/: __init__.py  callbacks.py  process.py  protobuf.py  trainer.py  utils.py
railcast/core/: __init__.py  cli.py  state.py
railcast/models/: __init__.py  base.py  conv_lstm.py  gru.py  protocols.py  simple_rnn.py  stacked_lstm.py
tempcast/: __init__.py  callbacks.py  process.py  protobuf.py  trainer.py  utils.py
tempcast/core/: __init__.py  cli.py
tempcast/mcp/: RESPONSE.md  __init__.py  client.py  config.json  helpers.py  middleware.py
tempcast/models/: __init__.py  conv_lstm.py  gru.py  simple_rnn.py  stacked_lstm.py
wandb/: settings
